force-app/main/default/objects/Reveal_Audit__c/Reveal_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit log for identity reveal request decisions. Retained for 2 years.</description>
    <label>Reveal Audit</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Reveal Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reveal Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>