force-app/main/default/objects/Reveal_Audit__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reveal Audits</relationshipLabel>
    <relationshipName>Reveal_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>