force-app/main/default/objects/Reveal_Audit__c/fields/Reveal_Request__c.field-meta.xml
<CustomField>
    <fullName>Reveal_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reveal Request</label>
    <referenceTo>Reveal_Request__c</referenceTo>
    <relationshipLabel>Reveal Audits</relationshipLabel>
    <relationshipName>Reveal_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>